[package]
name = "mini-prop"
version = "0.1.0"
edition = "2021"

[lib]
name = "mini_prop_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "mprop"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
