[package]
name = "mini-prop"
version = "0.1.1"
edition = "2021"
authors = ["Emil Hofstetter <@emilHof>"]
license-file = "LICENSE.txt"
description = "A lightweight CLI to parse and analyze propositional statements."
repository = "https://github.com/emilHof/mini-prop"
homepage = "https://github.com/emilHof/mini-prop"
documentation = "https://github.com/emilHof/mini-prop"
readme = "README.md"

[[bin]]
name = "mprop"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
prop_tune = {version = "0.1", path = "../prop_space/prop_tune"}
